force-app/main/default/objects/Hub__c/Hub__c.object-meta.xml
<CustomObject>
    <label>Hub</label>
    <nameField>
        <label>Hub Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>