force-app/main/default/objects/Hub__c/fields/Billing_Person__c.field-meta.xml
<CustomField>
    <fullName>Billing_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hubs1</relationshipName>
    <type>Lookup</type>
</CustomField>