force-app/main/default/objects/Hub__c/fields/BVC_CB_BVC_Entity__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_BVC_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB BVC Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Hubs (CB BVC Entity)</relationshipLabel>
    <relationshipName>Hubs1</relationshipName>
    <type>Lookup</type>
</CustomField>