force-app/main/default/objects/Hub__c/fields/BVC_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_ID__c</fullName>
    <label>BVC ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>