force-app/main/default/objects/Hub__c/fields/CB_BVC_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>CB_BVC_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB BVC Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Hubs (CB BVC Legal Entity)</relationshipLabel>
    <relationshipName>Hubs1</relationshipName>
    <type>Lookup</type>
</CustomField>