force-app/main/default/objects/Hub__c/fields/COA_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>COA_Branch_Code__c</fullName>
    <label>COA Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>