force-app/main/default/objects/Hub__c/fields/GSTIN_Entity__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_Entity__c</fullName>
    <label>GSTIN Entity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>