force-app/main/default/objects/Hub__c/fields/Hub_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Hub_Address_Line_2__c</fullName>
    <label>Hub Address Line 2</label>
    <type>TextArea</type>
</CustomField>