force-app/main/default/objects/Hub__c/fields/Hub_City__c.field-meta.xml
<CustomField>
    <fullName>Hub_City__c</fullName>
    <formula>TEXT(Hub_Pincode__r.City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub City</label>
    <type>Text</type>
</CustomField>