force-app/main/default/objects/Hub__c/fields/Hub_Code__c.field-meta.xml
<CustomField>
    <fullName>Hub_Code__c</fullName>
    <label>Hub Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>