force-app/main/default/objects/Hub__c/fields/Hub_Country__c.field-meta.xml
<CustomField>
    <fullName>Hub_Country__c</fullName>
    <formula>Hub_Pincode__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub Country</label>
    <type>Text</type>
</CustomField>