force-app/main/default/objects/Hub__c/fields/Hub_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Hub_Email_ID__c</fullName>
    <label>Hub Email ID</label>
    <type>Email</type>
</CustomField>