force-app/main/default/objects/Hub__c/fields/Hub_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Hub_Number_1__c</fullName>
    <label>Hub Number 1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>