force-app/main/default/objects/Hub__c/fields/Hub_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Hub_Number_2__c</fullName>
    <label>Hub Number 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>