force-app/main/default/objects/Hub__c/fields/Hub_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Hub_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hub Pincode</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Hubs</relationshipLabel>
    <relationshipName>Hubs</relationshipName>
    <type>Lookup</type>
</CustomField>