force-app/main/default/objects/Hub__c/fields/Hub_State__c.field-meta.xml
<CustomField>
    <fullName>Hub_State__c</fullName>
    <formula>Hub_Pincode__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub State</label>
    <type>Text</type>
</CustomField>