force-app/main/default/objects/Hub__c/fields/Ice_Gate_ID__c.field-meta.xml
<CustomField>
    <fullName>Ice_Gate_ID__c</fullName>
    <label>Ice Gate ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>