force-app/main/default/objects/Hub__c/fields/Ice_Gate_Pass__c.field-meta.xml
<CustomField>
    <fullName>Ice_Gate_Pass__c</fullName>
    <label>Ice Gate Pass</label>
    <length>25</length>
    <type>Text</type>
</CustomField>