force-app/main/default/objects/Hub__c/fields/Oracle_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Location_ID__c</fullName>
    <label>Oracle Location ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>