force-app/main/default/objects/Hub__c/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <label>Port</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>