force-app/main/default/objects/Hub__c/fields/Primary_Hub__c.field-meta.xml
<CustomField>
    <fullName>Primary_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Hub</label>
    <type>Checkbox</type>
</CustomField>