force-app/main/default/objects/Hub__c/fields/Sales_person__c.field-meta.xml
<CustomField>
    <fullName>Sales_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hubs</relationshipName>
    <type>Lookup</type>
</CustomField>