force-app/main/default/objects/Hub__c/fields/ST_BVC_Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>ST_BVC_Billing_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Billing Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>BVCHubs</relationshipLabel>
    <relationshipName>BVCHubs</relationshipName>
    <type>Lookup</type>
</CustomField>