force-app/main/default/objects/Hub__c/fields/Zone_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Master_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone Master Name</label>
    <referenceTo>Zone__c</referenceTo>
    <relationshipLabel>Hubs</relationshipLabel>
    <relationshipName>Hubs</relationshipName>
    <type>Lookup</type>
</CustomField>