force-app/main/default/objects/Hub__c/recordTypes/CB_Hub.recordType-meta.xml
<RecordType>
    <fullName>CB_Hub</fullName>
    <active>true</active>
    <label>CB Hub</label>
</RecordType>