force-app/main/default/objects/Hub__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>BVC_Entity__c</columns>
    <columns>Hub_City__c</columns>
    <columns>Zone_Master_Name__c</columns>
    <columns>Hub_Code__c</columns>
    <columns>Hub_Pincode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Billing_Person__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>